--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma-social": "^1.2.0",
     "core-js": "^3.6.5",
     "firebase": "^7.21.1",
     "vue": "^2.6.11",
