--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bulma-social": "^1.2.0",
     "core-js": "^3.6.5",
     "firebase": "^7.21.1",
+    "v-calendar": "^1.0.8",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3"
   },
